# SDSQL

./: .gitignore  CMakeLists.txt  README.md
docs/: 2024-2025-2学期《C++现代程序设计》课程-项目报告.docx  README.md
driver/: README.md  client_main.cpp  server_main.cpp
include/client/: CliApp.hpp  Parser.hpp
include/client/cli/: CliApp.hpp  Lexer.hpp  Parser.hpp  README.md  Token.hpp
include/client/common/: DatabaseAPI.hpp  README.md
include/client/gui/: README.md
include/net/: protocol.hpp  query.hpp  socket_client.hpp  socket_server.hpp
include/network/: query.hpp  serializer.hpp  socket_utils.hpp
include/server/: DatabaseAPI.hpp  README.md
lib/: README.md
src/client/: CliApp.cpp  Lexer.cpp  Parser.cpp  main.cpp
src/client/cli/: CliApp.cpp  CliApp.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  README.md  main.cpp
src/client/common/: DMLOperations.cpp  README.md
src/client/gui/: README.md
src/net/: protocol.cpp  query.cpp  serializer.cpp  socket_client.cpp  socket_server.cpp
src/network/: protocol.cpp  query.cpp  serializer.cpp  socket_client.cpp  socket_server.cpp
src/server/: AccessControl.cpp  DDLOperations.cpp  DMLOperations.cpp  Database.cpp  README.md  TransactionManager.cpp  main.cpp
test/: README.md
test/cli/: testcase.txt
